--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Stellar</h1>
-						<p>Just another free, fully responsive site template<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<span class="logo"><img src="images/constitution-party-banner-2.png" alt="Constitution party banner" /></span>
+						<h1>Cache County Constitution Party 2020 Convention</h1>
+						<p>Come and participate in the caucus and convention proceedings for the Cache County Constitution Party.</p>
+            <p>April 16th, 2020, 7:00pm - 8:00pm</br>
+            Jim Bridger room in the Logan Library</br>
+            255 North Main in Logan, Utah</p>
 					</header>
 
 				<!-- Nav -->
