Update all sections

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#location">Location and Date</a></li>
+							<li><a href="#agenda">Meeting Agenda</a></li>
+							<li><a href="#state-convention">State Convention</a></li>
+							<li><a href="#executive-committee">Executive Committee</a></li>
+							<li><a href="#footer">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -45,98 +47,126 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>Introduction</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>The goal of the <a href="http://www.utahconstitutionparty.com/" target="_blank" rel="noreferrer noopener">Utah Constitution Party</a>
+                    is to spread the message of “Honoring God, Defending the Family, and
+                    Restoring the Republic to the principles given us by the
+                    Founding Fathers”. This is the same message fostered by the
+                    Founding Fathers. They understood that to remain a free and
+                    prosperous nation their message needed to be embedded in the
+                    hearts and minds of each succeeding generation of
+                    Americans.</p>
+                    <p>If you're interested in participating in our party
+                    proceedings and having a voice in things such as future
+                    party leadership and nomination of candidates, please come
+                    and join us for our county caucus and convention.</p>
+                    <p>This meeting is for all members of the Utah Constitution
+                    Party in Cache County no matter what precinct you are in.
+                    This meeting will serve as both our caucus and our convention.</p>
+                    <p>Those who are not a member of the party are also welcome to come and
+                    observe. All are welcome.</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<!-- <span class="image"><img src="images/constitution-party-logo.png" alt="Constitution Party logo" /></span> -->
 								</div>
 							</section>
 
-						<!-- First Section -->
-							<section id="first" class="main special">
+            <!-- Date, Time and Place -->
+							<section id="location" class="main">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Convention Location and Date</h2>
 								</header>
-								<ul class="features">
-									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
+
+                <p>April 16th, 2020, 7:00pm - 8:00pm</br>
+                Jim Bridger room in the Logan Library</br>
+                255 North Main in Logan, Utah</p>
+
+                <p>We will be holding our caucus and convention at the Logan
+                public library in the Jim Bridger room. It is in the far end of
+                the building in the Northeast corner close to main street. If
+                you have difficulty finding the room, please ask a librarian for
+                assistance.</p>
+
+                <p>Our meeting is scheduled for 7:00pm to 8:00pm. We will ensure
+                that the meeting does not run past 8:00pm.</p>
 							</section>
 
-						<!-- Second Section -->
-							<section id="second" class="main special">
+						<!-- Agenda -->
+							<section id="agenda" class="main">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Convention Agenda</h2>
 								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
-									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
-									</li>
-									<li class="style3">
-										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
-									</li>
-									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
-									</li>
-									<li class="style5">
-										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
-									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
+                <!-- <span class="icon solid major style4 fa-list"></span> -->
+                <ul>
+                  <li>Opening Prayer</li>
+                  <li>Pledge of Allegiance</li>
+                  <li>Brief explanation of Utah Constitution Party principles and goals.</li>
+                  <li>Caucus Proceedings:</li>
+                      <li type="circle" style="margin-left: 2em">Election of
+                        county delegates. (These delegates will serve during the
+                        convention proceedings of this same meeting.)</li>
+                  <li>Convention Proceedings:</li>
+                      <li type="circle" style="margin-left: 2em">Election of delegates for the state convention.</li>
+                      <li type="circle" style="margin-left: 2em">Election of county executive committee members.</li>
+                  <li>Short presentation on religious freedom.</li>
+                  <li>Closing Prayer</li>
+                </ul>
 							</section>
 
-						<!-- Get Started -->
-							<section id="cta" class="main special">
+            <!-- State Convention -->
+							<section id="state-convention" class="main">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>State Convention</h2>
 								</header>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
+
+                <p>During our meeting, will be electing delegates for the Utah
+                Constitution Party state convention.</p>
+                <p>The state convention will be held on April 25th, 2020 in Salt
+                Lake City.</p>
+                <p>The state convention proceedings will include items such as:</p>
+                <ul>
+                  <li>Endorsing candidates for statewide office.</li>
+                  <li>Electing National Convention delegates.</li>  
+                  <li>Approving or amending the State Party Constitution or Bylaws.</li>
+                  <li>Adopting or revising the State Party Platform.</li>
+                  <li>Addressing other appropriate issues.</li>
+                </ul>
+                <p>The only requirements to serve as a state delegate is to be a
+                current member of the party and a willingness to serve.</p>
+							</section>
+
+            <!-- Executive Committee -->
+							<section id="executive-committee" class="main">
+								<header class="major">
+									<h2>County Executive Committee</h2>
+								</header>
+
+                <p>During our meeting, will be electing a new county executive
+                committee.</p>
+                <p>This committee includes the following positions:</p>
+                <ul>
+                  <li>County Chairman</li>
+                  <li>County Vice Chairman</li>  
+                  <li>County Secretary</li>
+                  <li>County Treasurer</li>
+                  <li>3 District Chairmen (North, Central, South)</li>
+                </ul>
+                <p>Ideally, we would like to fill all of these positions. At the
+                very least, we need a County Chairman in order to remain an active party
+                affiliate.</p>
+                <p>In the past, our executive committe has done things such as
+                running booths at fairs and shows, supporting other
+                freedom-minded groups in the area, and supporting candidates for
+                office. It can be a great way to get involved and help spread
+                the message of liberty and the Constitution.</p>
+                <p>The time commitment for each of these positions is
+                light. It probably averages 1-2 hours a month.</p>
+                <p>If you are interested in being a member of our executive
+                committee, please come and join us. Feel free to contact us if you
+                have any questions about these positions.</p>
 							</section>
 
 					</div>
@@ -144,31 +174,23 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
+							<h2>Questions?</h2>
+							<p>If you have any questions or comments about our planned
+              convention, please feel free to reach out to our county chairman,
+              Conrad Beach, and he'll be happy to help.</p>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Contact</h2>
 							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+								<dt>Chairman</dt>
+								<dd>Conrad Beach</dd>
 								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
+								<dd>(435)232-9842</dd>
 								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+								<dd><a href="mailto:cachecounty@utahconstitutionparty.com">cachecounty@utahconstitutionparty.com</a></dd>
 							</dl>
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">Design: <a href="https://html5up.net" target="_blank" rel="noreferrer noopener">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
