--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 						<span class="logo"><img src="images/constitution-party-banner-2.png" alt="Constitution party banner" /></span>
 						<h1>Cache County Constitution Party 2020 Convention</h1>
 						<p>Come and participate in the caucus and convention proceedings for the Cache County Constitution Party.</p>
-            <p>April 16th, 2020, 7:00pm - 8:00pm</br>
-            Jim Bridger room in the Logan Library</br>
+            <p>April 16th, 2020, 7:00pm - 8:00pm<br>
+            Jim Bridger room in the Logan Library<br>
             255 North Main in Logan, Utah</p>
 					</header>
 
@@ -80,8 +80,8 @@
 									<h2>Convention Location and Date</h2>
 								</header>
 
-                <p>April 16th, 2020, 7:00pm - 8:00pm</br>
-                Jim Bridger room in the Logan Library</br>
+                <p>April 16th, 2020, 7:00pm - 8:00pm<br>
+                Jim Bridger room in the Logan Library<br>
                 255 North Main in Logan, Utah</p>
 
                 <p>We will be holding our caucus and convention at the Logan
