Make phone number a link

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 								<dt>Chairman</dt>
 								<dd>Conrad Beach</dd>
 								<dt>Phone</dt>
-								<dd>(435)232-9842</dd>
+                <dd><a href="tel:435-232-9842">(435)232-9842</a></dd>
 								<dt>Email</dt>
 								<dd><a href="mailto:cachecounty@utahconstitutionparty.com">cachecounty@utahconstitutionparty.com</a></dd>
 							</dl>
