Update attribution link to point to the exact template

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 								<dd><a href="mailto:cachecounty@utahconstitutionparty.com">cachecounty@utahconstitutionparty.com</a></dd>
 							</dl>
 						</section>
-						<p class="copyright">Design: <a href="https://html5up.net" target="_blank" rel="noreferrer noopener">HTML5 UP</a>.</p>
+						<p class="copyright">Design: <a href="https://html5up.net/stellar" target="_blank" rel="noreferrer noopener">Stellar by HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
