--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <!-- Agenda -->
               <section id="agenda" class="main">
                 <header class="major">
-                  <h2>Convention Agenda</h2>
+                  <h2>Meeting Agenda</h2>
                 </header>
                 <!-- <span class="icon solid major style4 fa-list"></span> -->
                 <ul>
