Add additional details about state convention

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 
                 <p>During our meeting, will be electing delegates for the Utah
                 Constitution Party state convention.</p>
-                <p>The state convention will be held on April 25th, 2020 in Salt
-                Lake City.</p>
+                <p>The state convention will be held on April 25th, 2020 at
+                9:00am in the Salt Lake County Council Chambers.</p>
                 <p>The state convention proceedings will include items such as:</p>
                 <ul>
                   <li>Endorsing candidates for statewide office.</li>
