Add details about state convention agenda

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                   <li>Approving or amending the State Party Constitution or Bylaws.</li>
                   <li>Adopting or revising the State Party Platform.</li>
                   <li>Addressing other appropriate issues.</li>
+                  <li>Hearing from speakers.</li>
                 </ul>
                 <p>The only requirements to serve as a state delegate is to be a
                 current member of the party and a willingness to serve.</p>
