Make chair gender neutral

--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
                 committee.</p>
                 <p>This committee includes the following positions:</p>
                 <ul>
-                  <li>County Chairman</li>
-                  <li>County Vice Chairman</li>  
+                  <li>County Chair</li>
+                  <li>County Vice Chair</li>  
                   <li>County Secretary</li>
                   <li>County Treasurer</li>
-                  <li>3 District Chairmen (North, Central, South)</li>
+                  <li>3 District Chairs (North, Central, South)</li>
                 </ul>
                 <p>Ideally, we would like to fill all of these positions. At the
-                very least, we need a County Chairman in order to remain an active party
+                very least, we need a County Chair in order to remain an active party
                 affiliate.</p>
                 <p>In the past, our executive committe has done things such as
                 running booths at fairs and shows, supporting other
@@ -176,13 +176,13 @@
             <section>
               <h2>Questions?</h2>
               <p>If you have any questions or comments about our planned
-              convention, please feel free to reach out to our county chairman,
+              convention, please feel free to reach out to our county chair,
               Conrad Beach, and he'll be happy to help.</p>
             </section>
             <section>
               <h2>Contact</h2>
               <dl class="alt">
-                <dt>Chairman</dt>
+                <dt>Chair</dt>
                 <dd>Conrad Beach</dd>
                 <dt>Phone</dt>
                 <dd><a href="tel:435-232-9842">(435)232-9842</a></dd>
