Improve language in executive committee section.

--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
 
                 <p>During our meeting, will be electing a new county executive
                 committee.</p>
-                <p>This committee includes the following positions:</p>
+                <p>This committee includes the following county officers and
+                district officers:</p>
                 <ul>
                   <li>County Chair</li>
                   <li>County Vice Chair</li>  
@@ -162,11 +163,11 @@
                 freedom-minded groups in the area, and supporting candidates for
                 office. It can be a great way to get involved and help spread
                 the message of liberty and the Constitution.</p>
-                <p>The time commitment for each of these positions is
-                light. It probably averages 1-2 hours a month.</p>
+                <p>The term for each of these positions is 2 years. The time commitment is
+                light; it probably averages 1-2 hours a month.</p>
                 <p>If you are interested in being a member of our executive
-                committee, please come and join us. Feel free to contact us if you
-                have any questions about these positions.</p>
+                committee, please come to the meeting and offer your services.
+                Feel free to contact us if you have any questions about these positions.</p>
               </section>
 
           </div>
