--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
                   <li>Brief explanation of Utah Constitution Party principles and goals.</li>
                   <li>Caucus Proceedings:</li>
                       <li type="circle" style="margin-left: 2em">Election of
+                        district officers.</li>
+                      <li type="circle" style="margin-left: 2em">Election of
                         county delegates. (These delegates will serve during the
                         convention proceedings of this same meeting.)</li>
                   <li>Convention Proceedings:</li>
