Further agenda improvementsf

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                         county delegates. (These delegates will serve during the
                         convention proceedings of this same meeting.)</li>
                   <li>Convention Proceedings:</li>
+                      <li type="circle" style="margin-left: 2em">Election of county officers.</li>
                       <li type="circle" style="margin-left: 2em">Election of delegates for the state convention.</li>
-                      <li type="circle" style="margin-left: 2em">Election of county executive committee members.</li>
                   <li>Short presentation on religious freedom.</li>
                   <li>Closing Prayer</li>
                 </ul>
