Add video conference details

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
             <h1>Cache County Constitution Party 2020 Convention</h1>
             <p>Come and participate in the caucus and convention proceedings for the Cache County Constitution Party.</p>
             <p>April 16th, 2020, 7:00pm - 8:00pm<br>
-            Jim Bridger room in the Logan Library<br>
-            255 North Main in Logan, Utah</p>
+            <del>Jim Bridger room in the Logan Library</del><br>
+            <del>255 North Main in Logan, Utah</del></p>
+            <p>UPDATE: Due to concerns surrounding COVID-19, we will no longer
+            be holding an in-person meeting. We will instead meet over the
+            internet using a video conference. See
+            <a href="#location">below</a> for more details.</p>
           </header>
 
         <!-- Nav -->
@@ -81,14 +85,16 @@
                 </header>
 
                 <p>April 16th, 2020, 7:00pm - 8:00pm<br>
-                Jim Bridger room in the Logan Library<br>
-                255 North Main in Logan, Utah</p>
+                <del>Jim Bridger room in the Logan Library</del><br>
+                <del>255 North Main in Logan, Utah</del></p>
 
-                <p>We will be holding our caucus and convention at the Logan
-                public library in the Jim Bridger room. It is in the far end of
-                the building in the Northeast corner close to main street. If
-                you have difficulty finding the room, please ask a librarian for
-                assistance.</p>
+                <p>We originally intended to meet at the Logan public library.
+                However, due to concerns surrounding COVID-19 and out of a
+                desire to avoid unnecessarily holding a large gathering, we have
+                decided to instead meet virtually through a video conference.</p>
+
+                <p>Please see <a href="video-conference.html">this page</a> for
+                more details on how to join the video conference.</p>
 
                 <p>Our meeting is scheduled for 7:00pm to 8:00pm. We will ensure
                 that the meeting does not run past 8:00pm.</p>
