Don't commit to a particular conferencing solution
I'm still not sure what's the best video conferencing solution, so I'll just add a note that we're still deciding and ask people to check back later.

--- a/video-conference.html
+++ b/video-conference.html
@@ -27,27 +27,8 @@
 
             <!-- Content -->
               <section id="content" class="main">
-                <h2>How to Join</h2>
-                <p>For our meeting, we will be using Cisco Webex. You do not
-                need a Cisco Webex account to join the meeting. To join, visit
-                <a href="https://meetingsamer3.webex.com/meetingsamer3/j.php?MTID=mdd2f97e5ff0d09e2f1691cfb3437b421" target="_blank" rel="noreferrer noopener">this link</a> and enter the password "constitution" to connect to the meeting from your computer.</p>
-                <p>You can also connect using their <a href="https://apps.apple.com/us/app/cisco-webex-meetings/id298844386" target="_blank" rel="noreferrer noopener">iPhone/iPad app</a> or with the <a href="https://play.google.com/store/apps/details?id=com.cisco.webex.meetings" target="_blank" rel="noreferrer noopener">Android app</a>.</p>
-
-                <h2>Detailed Connection Instructions</h2>
-                <p> 
-                  https://meetingsamer3.webex.com/meetingsamer3/j.php?MTID=mdd2f97e5ff0d09e2f1691cfb3437b421<br>
-                  Meeting number (access code): 624 470 196<br>
-                  Host key: 408737<br>
-                  Meeting password: constitution
-                </p>
-
-                <h2>Need Help?</h2>
-                <p>We'd encourage you to connect to the video conference at least 10 or 15 minutes
-                before the meeting so you have time to install software and resolve any technical
-                issues you may encounter. You may even want to get set up well
-                in advance of the meeting if you're unfamiliar with video
-                conferencing software. Feel free to contact our county chair,
-                Conrad Beach, with any questions or problems.</p>
+                <p>We are still determining the best video conferencing solution for
+                our convention. Please check back later for updates.</p>
 
                 <p><a href="index.html">Back to the Main Page</a></p>
               </section>
