--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <span class="logo"><img src="images/constitution-party-banner-2.png" alt="Constitution party banner" /></span>
             <h1>Cache County Constitution Party 2020 Convention</h1>
             <p>Come and participate in the caucus and convention proceedings for the Cache County Constitution Party.</p>
-            <p>April 16th, 2020, 7:00pm - 8:00pm<br>
+            <p><del>April 16th</del> April 14th, 2020, 7:00pm - 8:00pm<br>
             <del>Jim Bridger room in the Logan Library</del><br>
             <del>255 North Main in Logan, Utah</del></p>
             <p>UPDATE: Due to concerns surrounding COVID-19, we will no longer
@@ -84,7 +84,7 @@
                   <h2>Convention Location and Date</h2>
                 </header>
 
-                <p>April 16th, 2020, 7:00pm - 8:00pm<br>
+                <p><del>April 16th</del> April 14th, 2020, 7:00pm - 8:00pm<br>
                 <del>Jim Bridger room in the Logan Library</del><br>
                 <del>255 North Main in Logan, Utah</del></p>
 
@@ -132,8 +132,8 @@
 
                 <p>During our meeting, will be electing delegates for the Utah
                 Constitution Party state convention.</p>
-                <p>The state convention will be held on April 25th, 2020 at
-                9:00am in the Salt Lake County Council Chambers.</p>
+                <p>The state convention will be held on <del>April 25th</del> April 15th, 2020 in the
+                evening. It will be held online.</p>
                 <p>The state convention proceedings will include items such as:</p>
                 <ul>
                   <li>Endorsing candidates for statewide office.</li>
