Add time for state convention

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 
                 <p>During our meeting, will be electing delegates for the Utah
                 Constitution Party state convention.</p>
-                <p>The state convention will be held on <del>April 25th</del> April 15th, 2020 in the
-                evening. It will be held online.</p>
+                <p>The state convention will be held on <del>April 25th</del>
+                April 15th, 2020 at 7pm. It will be held online.</p>
                 <p>The state convention proceedings will include items such as:</p>
                 <ul>
                   <li>Endorsing candidates for statewide office.</li>
