Add additional details about joining the call.

--- a/video-conference.html
+++ b/video-conference.html
@@ -37,6 +37,12 @@
                 <a href="https://apps.apple.com/us/app/cisco-webex-meetings/id298844386" target="_blank" rel="noreferrer noopener">iPhone/iPad
                 app</a> or with the <a href="https://play.google.com/store/apps/details?id=com.cisco.webex.meetings" target="_blank" rel="noreferrer noopener">Android app</a>.</p>
 
+                <p>If joining from your computer, it will be very helpful if you
+                have a microphone so that you can speak on the call. If you
+                don't have a microphone, you can still comment during the
+                meeting using the chat feature. You can open the chat by clicking
+                the chat bubble button on the bottom of the screen.</p>
+
                 <p>When you go to the link, you'll be probably be prompted to download and
                 install the Cisco Webex desktop app. You can do this if you want, or you can
                 click "Cancel" and join from your web browser. If you choose to
@@ -50,13 +56,14 @@
 
                 <p>If you are prompted for a password, enter "constitution".</p>
 
+                <p>If it asks you how to join the call's audio, select the
+                option to join using your computer's audio.</p>
+
                 <p>Once you join the call, keep please your microphone muted so the
                 call doesn't get noisy. Because there will possibly be a large
                 number of partipants, please be extra courteous about when you
                 choose to unmute and talk. You're welcome to comment in the chat at any time and
-                communicate with the other participants of the meeting.
-                You can open the chat by clicking the chat bubble button on the bottom of the screen.</p>
-
+                communicate with the other participants of the meeting.</p>
 
                 <h2>Need Help?</h2>
                 <p>We'd encourage you to connect to the video conference at least 10 or 15 minutes
@@ -67,9 +74,9 @@
                 Conrad Beach, with any questions or problems. (His contact
                 details are on the bottom of this page.)</p>
 
-                <p>If you get disconnected during the meeting, please call or
-                text Conrad Beach and let him know. We'll try and get you
-                reconnected.</p>
+                <p>If you get disconnected during the meeting, please
+                text Conrad Beach (435-232-9842) or David Gillie (571- 723-0331)
+                and let them know. We'll try and get you reconnected.</p>
 
                 <h2>Extra Connection Details</h2>
                 <p> 
