Further agenda updates

--- a/index.html
+++ b/index.html
@@ -112,13 +112,12 @@
                   <li>Brief explanation of Utah Constitution Party principles and goals.</li>
                   <li>Caucus Proceedings:</li>
                       <li type="circle" style="margin-left: 2em">Election of
-                        district officers.</li>
-                      <li type="circle" style="margin-left: 2em">Election of
                         county delegates. (These delegates will serve during the
                         convention proceedings of this same meeting.)</li>
                   <li>Convention Proceedings:</li>
                       <li type="circle" style="margin-left: 2em">Discuss potential change to county bylaws.</li>
                       <li type="circle" style="margin-left: 2em">Election of county officers.</li>
+                      <li type="circle" style="margin-left: 2em">Election of district officers.</li>
                       <li type="circle" style="margin-left: 2em">Election of delegates for the state convention.</li>
                   <li>Short presentation on religious freedom.</li>
                   <li>Closing Prayer</li>
