--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <p>Ideally, we would like to fill all of these positions. At the
                 very least, we need a County Chair in order to remain an active party
                 affiliate.</p>
-                <p>In the past, our executive committe has done things such as
+                <p>In the past, our executive committee has done things such as
                 running booths at fairs and shows, supporting other
                 freedom-minded groups in the area, and supporting candidates for
                 office. It can be a great way to get involved and help spread
