Make additional clarifications to the video conference page

--- a/video-conference.html
+++ b/video-conference.html
@@ -29,8 +29,10 @@
               <section id="content" class="main">
                 <h2>How to Join</h2>
                 <p>For our meeting, we will be using Cisco Webex. You don't
-                need a Cisco Webex account to join the meeting. To join the
-                meeting from your computer, visit
+                need a Cisco Webex account to join the meeting. You also don't
+                need to install any software if you don't want to; you can join
+                the meeting from your web browser.</p>
+                <p>To join the meeting from your computer, visit
                 <a href="https://meetingsamer3.webex.com/meetingsamer3/j.php?MTID=mdd2f97e5ff0d09e2f1691cfb3437b421" target="_blank" rel="noreferrer noopener">this
                   link</a>.</p>
                 <p>You can also connect using their
@@ -48,7 +50,7 @@
                 click "Cancel" and join from your web browser. If you choose to
                 join from your web browser, click "Cancel" and then click the
                 "Join from your browser" link. It may take a couple of seconds
-                to show up on the page.</p>
+                for the link to show up on the page.</p>
 
                 <p>You will be asked to enter your name and email to join the
                 call. Please enter accurate information here so we have an
@@ -57,7 +59,8 @@
                 <p>If you are prompted for a password, enter "constitution".</p>
 
                 <p>If it asks you how to join the call's audio, select the
-                option to join using your computer's audio.</p>
+                option to join using your computer's audio unless you know you
+                want to use another option.</p>
 
                 <p>Once you join the call, keep please your microphone muted so the
                 call doesn't get noisy. Because there will possibly be a large
