Fix explanation of district committees

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                   <li>County Vice Chair</li>  
                   <li>County Secretary</li>
                   <li>County Treasurer</li>
-                  <li>3 District Chairs (North, Central, South)</li>
+                  <li>4 District Committees</li>
                 </ul>
                 <p>Ideally, we would like to fill all of these positions. At the
                 very least, we need a County Chair in order to remain an active party
