Remove space in phone number

--- a/video-conference.html
+++ b/video-conference.html
@@ -78,7 +78,7 @@
                 details are on the bottom of this page.)</p>
 
                 <p>If you get disconnected during the meeting, please
-                text Conrad Beach (435-232-9842) or David Gillie (571- 723-0331)
+                text Conrad Beach (435-232-9842) or David Gillie (571-723-0331)
                 and let them know. We'll try and get you reconnected.</p>
 
                 <h2>Extra Connection Details</h2>
